--- a/src/app/login-components/login.component.css
+++ b/src/app/login-components/login.component.css
@@ -4,28 +4,53 @@ height: 100px;
 
 }
 .container{
-    margin-top: 60px;
+    margin: auto;
+    text-align: center;
+    align-content: center;
     width: 500px;
     height: 500px;
-    text-align: center;
+padding: 50px;
+background-color: rgb(233, 223, 177);
+border-radius: 40px;
+border-style: solid;
+border-width: 2px;
+background-image: url("/../assets/background.jpg");
+background-size: 100% 100% ;
+box-shadow: inset 0px 0px 500px 50px rgba(0, 0, 0, .7);
 }
 
 .btnContainer{
     margin-top: 20px;
 }
-
+::placeholder{
+    color: black;
+    font-size: 25px;
+}
 .btn{
     background-color: aquamarine;
     border-radius: 25px;
     padding: 10px;
     width: 200px;
     font-size: 25px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: darkcyan;
+}
+.btn:hover{
+    cursor: pointer;
 }
 
 .inputField{
-    height: 50px;
+    height: 60px;
+    border-width: 3px;
     border-radius: 10px;
-    font-size: 20px;
+    border-color: black;
+    border-style: solid;
+    font-size: 23px;
     text-align: left;
     padding-left: 10px;
+    margin-top: 150px;
+    background:transparent;
+    color: black;
+    outline: none;
 }
