--- a/src/app/login-components/login.component.css
+++ b/src/app/login-components/login.component.css
@@ -11,12 +11,13 @@ height: 100px;
     height: 500px;
 padding: 50px;
 background-color: rgb(233, 223, 177);
-border-radius: 40px;
+/* border-radius: 40px;
 border-style: solid;
-border-width: 2px;
-background-image: url("/../assets/background.jpg");
-background-size: 100% 100% ;
-box-shadow: inset 0px 0px 500px 50px rgba(0, 0, 0, .7);
+border-width: 2px; */
+background: transparent;
+/* background-image: url("/../assets/background.jpg");
+background-size: 100% 100% ; */
+/* box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7); */
 }
 
 .btnContainer{
@@ -53,4 +54,9 @@ box-shadow: inset 0px 0px 500px 50px rgba(0, 0, 0, .7);
     background:transparent;
     color: black;
     outline: none;
+}
+.mainDiv{
+    background-image: url("/../assets/background2.png");
+background-size: 100% 100% ;
+box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7);
 }
