--- a/src/app/login-components/login.component.html
+++ b/src/app/login-components/login.component.html
@@ -4,7 +4,7 @@
         <img src="https://images-ext-2.discordapp.net/external/bWJJKDjfnuUvcgAr0Zg142a26HhmeDMqwCMWolRx1ZI/https/upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%25C3%25A9mon_logo.svg/2560px-International_Pok%25C3%25A9mon_logo.svg.png?width=1202&height=442" alt="pokemon"/>
         <input class="inputField" placeholder="Username..." type="text">
         <div class="btnContainer">
-            <button class="btn">SIGN IN</button>
+            <button class="btn" routerLink="/trainers">SIGN IN</button>
             
         </div>
     </div>
