--- a/src/app/trainers/trainers.page.html
+++ b/src/app/trainers/trainers.page.html
@@ -1,3 +1,5 @@
-
-
-<h1>Hello World!</h1>
+<div class="container">
+    <h1>Welcome Trainer</h1>
+    <button class="btn" routerLink="/pokedex">Pokedex</button>
+        
+</div>
