--- a/src/app/pokedex/pokedex.page.html
+++ b/src/app/pokedex/pokedex.page.html
@@ -1,4 +1,4 @@
 <div class="container">
     <h1>Welcome to Pokedex</h1>
-    <button class="btn" routerLink="/" >Logout</button>
+    <button class="btn" routerLink="/login" >Logout</button>
 </div>
