--- a/src/app/trainers/trainers.page.css
+++ b/src/app/trainers/trainers.page.css
@@ -1,6 +1,10 @@
 .container{
-    background-color: cadetblue;
+    background-color:rgb(115, 209, 209);
     margin: 0;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: darkcyan;
 
 }
 
