--- a/src/app/login-components/login.component.css
+++ b/src/app/login-components/login.component.css
@@ -1,23 +1,14 @@
 img {
-    height: 100px;
-
+    height: 200px;
 }
 
 .container {
     margin: auto;
     text-align: center;
-    align-content: center;
-    width: 500px;
-    height: 500px;
+    justify-content: center;
     padding: 50px;
-    background-color: rgb(233, 223, 177);
-    /* border-radius: 40px;
-border-style: solid;
-border-width: 2px; */
+    border-width: 2px;
     background: transparent;
-    /* background-image: url("/../assets/background.jpg");
-background-size: 100% 100% ; */
-    /* box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7); */
 }
 
 .btnContainer {
@@ -46,21 +37,42 @@ background-size: 100% 100% ; */
 
 .inputField {
     height: 60px;
-    border-width: 3px;
+    border-width: 5px;
     border-radius: 10px;
-    border-color: black;
+    border-color: rgba(0, 0, 0, 0.74);
     border-style: solid;
     font-size: 23px;
     text-align: left;
     padding-left: 10px;
-    margin-top: 150px;
+    position: relative;
     background: transparent;
     color: black;
     outline: none;
 }
 
+form {
+    margin-top: 200px;
+
+}
+
+
+body {
+    position: relative;
+}
+
+
 .mainDiv {
-    background-image: url("/../assets/background2.png");
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url("/../assets/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
     background-size: 100% 100%;
     box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7);
 }
