--- a/src/app/trainers/trainers.page.html
+++ b/src/app/trainers/trainers.page.html
@@ -1,4 +1,16 @@
 <div class="container">
     <h1>Welcome Trainer</h1>
+    <div class="pokemon-grid-container">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+        <div class="box">6</div>
+        <div class="box">7</div>
+        <div class="box">8</div>
+        <div class="box">9</div>
+        <div class="box">10</div>
+    </div>
     <button class="btn" routerLink="/pokedex">Pokedex</button>
 </div>
