--- a/src/app/login-components/login.component.html
+++ b/src/app/login-components/login.component.html
@@ -2,13 +2,14 @@
     <div class="container">
         <img src="https://images-ext-2.discordapp.net/external/bWJJKDjfnuUvcgAr0Zg142a26HhmeDMqwCMWolRx1ZI/https/upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%25C3%25A9mon_logo.svg/2560px-International_Pok%25C3%25A9mon_logo.svg.png?width=1202&height=442"
             alt="pokemon" />
-        <form [formGroup]="loginForm" (ngSubmit)="login()">
-            <input class="inputField" placeholder="Username..." type="text" formControlName="username">
+        <form>
+            <input  name="username" class="inputField" placeholder="Username..." type="text" [(ngModel)]="username">
             <div class="btnContainer">
-                <button class="btn"             type="submit">SIGN IN</button>
+                <button class="btn"   (click)="login()"   type="button">SIGN IN</button>
                 <!-- routerLink="/trainers" -->
-                
             </div>
+            <p>{{APIusername}}</p>
         </form>
+                
     </div>
 </div>
