--- a/src/app/trainers/trainers.page.css
+++ b/src/app/trainers/trainers.page.css
@@ -15,15 +15,21 @@ body {
 .btn{
     height: 40px;
 }
-.pokemon-grid-container{
-    display: grid;
+
+ .pokemon-grid-container{
+     display: flex;
+     flex-wrap: wrap;
+     gap: 2rem;
+     justify-content: center;
+     align-content: center;
+/*    display: grid;
     grid-gap: 20px;
     padding: 20px;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto;*/
 }
 
 .box{
-    width: 300px;
+    width: 250px;
     height: 300px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
     background-color: white;
