Chore: adding comment about authguard, remove spaces and other commented code

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,14 +3,12 @@
         <img src="https://images-ext-2.discordapp.net/external/bWJJKDjfnuUvcgAr0Zg142a26HhmeDMqwCMWolRx1ZI/https/upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%25C3%25A9mon_logo.svg/2560px-International_Pok%25C3%25A9mon_logo.svg.png?width=1202&height=442"
             alt="pokemon" />
         <form>
-            <input  name="username" class="inputField" placeholder="Username..."
-             type="text" [(ngModel)]="inputUsername">
+            <input name="username" class="inputField" placeholder="Username..." type="text" [(ngModel)]="inputUsername">
             <div class="btnContainer">
-                <button class="btn"   (click)="login()"   type="button">SIGN IN</button>
-                <!-- routerLink="/trainers" -->
+                <button class="btn" (click)="login()" type="button">SIGN IN</button>
             </div>
             <p>{{APIusername}}</p>
         </form>
-                
+
     </div>
 </div>
