add getPokemonById func and reload OnInit

--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -5,7 +5,6 @@
         <p>
             <b>Type:</b> {{ pokemon.types[0].type.name }}
         </p>
-       
+        <button>Catch {{pokemon["name"]}}</button>
     </div>
-  
 </div>
