feat: trying to add user to localstorage + a-guard function

--- a/src/app/trainers/trainers.page.html
+++ b/src/app/trainers/trainers.page.html
@@ -13,4 +13,6 @@
         <div class="box">10</div>
     </div>
     <button class="btn" routerLink="/pokedex">Pokedex</button>
+    <button class="btn" (click)="logout()"
+    >Logout</button>
 </div>
