--- a/src/app/trainers/trainers.page.css
+++ b/src/app/trainers/trainers.page.css
@@ -1,36 +1,78 @@
-body {
+body {}
+
+h1 {
+    font-size:50pt;
+    color: rgb(233, 6, 6);
+    text-shadow: 4px 2px 10px #FF0000;
+}
+
+h4, p {
+    color: white;
+}
+
+.container {
     position: relative;
+    text-align: center;
+    justify-content: center;
+    padding: 50px;
+    border-width: 2px;
+    background: transparent;
+    width: 100vw;
+    height: 90vh;
+    margin-bottom: 200px;
+    overflow: auto;
 }
 
-.container{
-    background-color:rgb(115, 209, 209);
-    margin: 0;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 10px;
-    border-color: darkcyan;
 
-}
 
-.btn{
-    height: 40px;
-}
-
- .pokemon-grid-container{
-     display: flex;
-     flex-wrap: wrap;
-     gap: 2rem;
-     justify-content: center;
-     align-content: center;
-/*    display: grid;
-    grid-gap: 20px;
+.pokemon-grid {
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 16px; 
     padding: 20px;
-    grid-template-columns: auto auto auto auto auto;*/
 }
 
-.box{
+.btn {
+    background-color: aquamarine;
+    border-radius: 25px;
+    padding: 10px;
+    width: 200px;
+    font-size: 25px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: darkcyan;
+}
+
+.box {
     width: 250px;
     height: 300px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
     background-color: white;
+    background: transparent;
+    border-style: solid;
+    border-width: 3px;
+    border-color: white;
+    border-radius: 30px;
+}
+
+.mainDivT {
+    filter:brightness(1.15);
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/../assets/blue-background.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    background-size: 100% 100%;
+    box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7);
+    overflow: hidden;
 }
