--- a/src/app/trainers/trainers.page.html
+++ b/src/app/trainers/trainers.page.html
@@ -1,18 +1,134 @@
-<div class="container">
-    <h1>Welcome Trainer</h1>
-    <div class="pokemon-grid-container">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
-        <div class="box">10</div>
+<div class="mainDivT">
+    <div class="container">
+        <img >
+        <h1>Welcome {{username}} to your Pokemon Collection</h1>
+        <div class="pokemon-grid">
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+            <div class="box" >
+                <div>
+                    <p>pokemon image</p>
+                </div>
+                <!-- <img [src]="pokemon.sprites" alt=""> -->
+                <h4>pokemon name</h4>
+                <p>
+                    <b>Type:</b> 
+                </p>
+                <button>Release </button>
+            </div>
+        </div>
+        <div class="btnContainer">
+            <button class="btn" routerLink="/pokedex">Pokédex</button>
+            <button class="btn" (click)="logout()"
+            >Logout</button>
+        </div>
     </div>
-    <button class="btn" routerLink="/pokedex">Pokedex</button>
-    <button class="btn" (click)="logout()"
-    >Logout</button>
 </div>
