add - code from catalog

--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -5,6 +5,8 @@
         <p>
             <b>Type:</b> {{ pokemon.types[0].type.name }}
         </p>
-        <button>Catch {{pokemon["name"]}}</button>
+      
+        <button (click)="catchAPokemon(this.user, pokemon)">Catch {{pokemon["name"]}}</button>
     </div>
+   
 </div>
