--- a/src/app/pokemon-list/pokemon-list.page.css
+++ b/src/app/pokemon-list/pokemon-list.page.css
@@ -2,12 +2,12 @@
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    grid-gap: 16px; 
+    grid-gap: 16px;
     padding: 20px;
 }
 
 h1 {
-    font-size:50pt;
+    font-size: 50pt;
     color: rgb(233, 6, 6);
     text-shadow: 4px 2px 10px #FF0000;
 }
@@ -23,7 +23,7 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    display: flex; 
+    display: flex;
     box-shadow: inset 0px 0px 0px 500px rgba(0, 0, 0, .7);
     overflow: hidden;
 }
@@ -40,13 +40,14 @@ h1 {
     margin-bottom: 200px;
     overflow: auto;
 }
-.box h4{
+
+.box h4 {
     font-family: cursive;
 }
 
-.box p{
+.box p {
     color: rgb(200, 181, 3);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .box {
@@ -77,7 +78,14 @@ h1 {
     cursor: default;
 }
 
-.btn :hover{
-    cursor:pointer;
+.btn :hover {
+    cursor: pointer;
     color: bisque;
+}
+
+#trainerBtn {
+    width: 100px;
+    height: 70px;
+    position: sticky;
+    top: 0;
 }
