--- a/src/app/pokemon-list/pokemon-list.page.html
+++ b/src/app/pokemon-list/pokemon-list.page.html
@@ -1,6 +1,7 @@
 <div class="mainDiv">
     <div class="container">
         <h1>Pokedex</h1>
+        <button id="trainerBtn" (click)="goToTrainer()">Go to trainers page!</button>
         <div class="pokemon-grid">
             <div class="box" *ngFor="let pokemon of pokemonFromSession let i = index">
                 <img [src]="pokemon.sprites" alt="">
