--- a/src/app/trainers/trainers.page.css
+++ b/src/app/trainers/trainers.page.css
@@ -7,7 +7,10 @@ h1 {
 }
 
 h4, p {
-    color: white;
+    color: rgb(0, 0, 0);
+    font-family: cursive;
+    margin:0 ;
+    margin-bottom: 5px;
 }
 
 .container {
@@ -40,18 +43,36 @@ h4, p {
     border-style: solid;
     border-width: 3px;
     border-color: darkcyan;
+    margin: 10px;
+}
+
+.releaseBtn:hover{
+    background-color: #FF0000;
+    color: black;
+}
+
+.releaseBtn{
+color: #000000;
+background-color: rgba(102, 163, 33, 0.918);
+cursor: pointer;
+border-radius: 8px;
+border-style: solid;
+border-width: 3px;
+border-color: rgb(66, 0, 0);
 }
 
 .box {
-    width: 250px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
     background-color: white;
-    background: transparent;
+    /* background: transparent; */
     border-style: solid;
-    border-width: 3px;
-    border-color: white;
-    border-radius: 30px;
+    border-width: 5px;
+    border-color: rgb(0, 0, 0);
+    border-radius: 50%;
+    background: linear-gradient(180deg,rgba(255, 0, 0, 0.794) 48%, black 48%, 50%, rgba(255, 255, 255, 0.877) 32%);
+    box-shadow: inset 0px 0px 0px 102px rgba(0, 0, 0, .25);
 }
 
 .mainDivT {
