--- a/src/app/pokemon-list/pokemon-list.page.css
+++ b/src/app/pokemon-list/pokemon-list.page.css
@@ -82,9 +82,26 @@ h1 {
     background-color: rgb(233, 128, 0);
 }
 
-#trainerBtn {
-    width: 100px;
-    height: 70px;
+#trainerBtn, #logoutBtn{
+    background-color: aquamarine;
+    border-radius: 35px;
+    padding: 1px;
+    width: 200px;
+    font-size: 20px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: darkcyan;
+    height: 50px;
     position: sticky;
-    top: 0;
+    top: 0px;
+    float: right;
+    margin:20px;
+}
+
+.btnContainer{
+    width: 200px;
+    float: right;
+    position: sticky;
+    top:0;
+    flex-direction: column;
 }
