--- a/src/app/pokemon-list/pokemon-list.page.html
+++ b/src/app/pokemon-list/pokemon-list.page.html
@@ -1,7 +1,10 @@
 <div class="mainDiv">
     <div class="container">
         <h1>Pokedex</h1>
-        <button id="trainerBtn" (click)="goToTrainer()">Go to trainers page!</button>
+        <div class="btnContainer">
+            <button id="trainerBtn" (click)="goToTrainer()">To Trainer page</button>
+            <button id="logoutBtn" (click)="logout()">Logout</button>
+        </div>
         <div class="pokemon-grid">
             <div class="box" *ngFor="let pokemon of pokemonFromSession let i = index">
                 <img [src]="pokemon.sprites" alt="">
