--- a/src/app/trainers/trainers.page.css
+++ b/src/app/trainers/trainers.page.css
@@ -1,7 +1,7 @@
 body {}
 
 h1 {
-    font-size:50pt;
+    font-size: 50pt;
     color: rgb(233, 6, 6);
     text-shadow: 4px 2px 10px #FF0000;
 }
@@ -9,7 +9,7 @@ h1 {
 h4, p {
     color: rgb(0, 0, 0);
     font-family: cursive;
-    margin:0 ;
+    margin: 0;
     margin-bottom: 5px;
 }
 
@@ -30,7 +30,7 @@ h4, p {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    grid-gap: 16px; 
+    grid-gap: 16px;
     padding: 20px;
 }
 
@@ -46,19 +46,19 @@ h4, p {
     margin: 10px;
 }
 
-.releaseBtn:hover{
+.releaseBtn:hover {
     background-color: #FF0000;
     color: black;
 }
 
-.releaseBtn{
-color: #000000;
-background-color: rgba(102, 163, 33, 0.918);
-cursor: pointer;
-border-radius: 8px;
-border-style: solid;
-border-width: 3px;
-border-color: rgb(66, 0, 0);
+.releaseBtn {
+    color: #000000;
+    background-color: rgba(102, 163, 33, 0.918);
+    cursor: pointer;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: rgb(66, 0, 0);
 }
 
 .box {
@@ -71,12 +71,12 @@ border-color: rgb(66, 0, 0);
     border-width: 5px;
     border-color: rgb(0, 0, 0);
     border-radius: 50%;
-    background: linear-gradient(180deg,rgba(255, 0, 0, 0.794) 48%, black 48%, 50%, rgba(255, 255, 255, 0.877) 32%);
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.794) 48%, black 48%, 50%, rgba(255, 255, 255, 0.877) 32%);
     box-shadow: inset 0px 0px 0px 102px rgba(0, 0, 0, .25);
 }
 
 .mainDivT {
-    filter:brightness(1.15);
+    filter: brightness(1.15);
     z-index: -1;
     position: absolute;
     top: 0;
@@ -93,4 +93,12 @@ border-color: rgb(66, 0, 0);
     display: flex;
     box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7);
     overflow: hidden;
+}
+
+.btnContainer{
+    width: 200px;
+    float: right;
+    position: sticky;
+    top:0;
+    flex-direction: column;
 }
