--- a/src/app/login/login.page.css
+++ b/src/app/login/login.page.css
@@ -3,12 +3,17 @@ img {
 }
 
 .container {
-    margin: auto;
+    margin: 0;
+    margin-bottom: 500px;
     text-align: center;
     justify-content: center;
     padding: 50px;
     border-width: 2px;
     background: transparent;
+    position: relative;
+    width: 100vw;
+    height: 90vh;
+    overflow: auto;
 }
 
 .btnContainer {
@@ -71,6 +76,6 @@ body {
     background-size: cover;
     background-position: center center;
     display: flex;
-    background-size: 100% 100%;
     box-shadow: inset 20px 0px 500px 50px rgba(0, 0, 0, .7);
+    overflow: hidden;
 }
