--- a/src/app/trainers/trainers.page.html
+++ b/src/app/trainers/trainers.page.html
@@ -1,18 +1,16 @@
 <div class="mainDivT">
     <div class="container">
-        <img >
+        <img>
         <h1>Welcome {{this.user.username}} to Pokemon Collection</h1>
         <div class="btnContainer">
             <button class="btn" routerLink="/pokedex">Pokédex</button>
-            <button class="btn" (click)="logout()"
-            >Logout</button>
+            <button class="btn" (click)="logout()">Logout</button>
         </div>
-        <div class="pokemon-grid" >
-            <div class="box" *ngFor="let pokemon of this.user.pokemon let i = index" >
+        <div class="pokemon-grid">
+            <div class="box" *ngFor="let pokemon of this.user.pokemon let i = index">
                 <div>
                     <img [src]="pokemon.sprites" alt="">
                 </div>
-          
                 <h4>{{pokemon.name.toUpperCase()}}</h4>
                 <p>
                     <b>Type:</b> {{pokemon.types[0].type.name}}
