fix: toUpperCase error

--- a/src/app/trainers/trainers.page.html
+++ b/src/app/trainers/trainers.page.html
@@ -11,7 +11,7 @@
                 <div>
                     <img [src]="pokemon.sprites" alt="">
                 </div>
-                <h4>{{pokemon.name.toUpperCase()}}</h4>
+                <h4>{{pokemon.name}}</h4>
                 <p>
                     <b>Type:</b> {{pokemon.types[0].type.name}}
                 </p>
